# appcoreos

./: .gitignore  Containerfile  Containerfile.prebuilt  README.md  build.sh  dev.sh  runvm.sh
.github/workflows/: appcorectl-release.yml  ci.yml  daily-image-build.yml
appcorectl/: .gitignore  Cargo.toml  Makefile  README.md  go.mod
appcorectl/.github/workflows/: ci.yml
appcorectl/cmd/appcorectl/: main.go
appcorectl/docs/: config.example.yaml
appcorectl/internal/cli/: app.go  bootstrap_cmd.go  completion_cmd.go  integration_test.go  ops_cmd.go  target_cmd.go  validation_test.go
appcorectl/internal/client/: auth_test.go  client.go  tls_test.go
appcorectl/internal/config/: config.go  config_test.go
appcorectl/internal/output/: output.go  output_test.go
appcorectl/internal/security/: pki.go  pki_test.go  redact.go  server_trust.go
appcorectl/scripts/: build.sh  build_and_run.sh  build_install.sh  build_linux_amd64.sh  package.sh
appcorectl/src/: lib.rs  main.rs
appliance-config-api/: app.py
appliance-config-api/configs/: default.yaml  machines.json
docs/: API.md  OS_SETUP.md  README.md
rootfs/etc/systemd/system/: agent.service  appcore.target  containers.service  default.target  getty@ttyS0.service  machine-config.service  machine-id.service  podman-auto-update.service  podman-auto-update.timer  state.service  tui.service  update-os.service  update-os.timer
rootfs/usr/lib/your-os/: agent-debug-server.py  agent.sh  apply-machine-config.sh  bootstrap-machine-config.sh  generate-containers.sh  generate-state.sh  init-machine-id.sh  tui.sh  update-os.sh
system_files/etc/containers/systemd/: .keep
system_files/etc/systemd/journald.conf.d/: 10-appcoreos-console.conf
system_files/etc/systemd/system/: agent.service  appcore.target  appcoreos-reboot-window.service  state.service  (+8 more)
system_files/etc/systemd/system.conf.d/: 10-appcoreos-console.conf
tests/: test_appliance_hardening.py
(+15 files in other folders)
